Booking Menu selesai, bagian cetak tiket belum

--- a/src/client/views/BookingMenu.form
+++ b/src/client/views/BookingMenu.form
@@ -493,12 +493,12 @@
                                   <Group type="103" alignment="1" groupAlignment="0" attributes="0">
                                       <Component id="lblFromStation" min="-2" pref="205" max="-2" attributes="0"/>
                                       <Component id="lblDestination" min="-2" pref="205" max="-2" attributes="0"/>
-                                      <Component id="lblBookingName" min="-2" pref="205" max="-2" attributes="0"/>
+                                      <Component id="lblBookingName1" min="-2" pref="205" max="-2" attributes="0"/>
                                       <Component id="lblDate" min="-2" pref="205" max="-2" attributes="0"/>
                                       <Component id="lblCost" min="-2" pref="205" max="-2" attributes="0"/>
                                   </Group>
-                                  <Component id="lblAdditionalCost" alignment="1" min="-2" pref="205" max="-2" attributes="0"/>
-                                  <Component id="lblTotalCost" alignment="1" min="-2" pref="205" max="-2" attributes="0"/>
+                                  <Component id="lblAdditionalCost1" alignment="1" min="-2" pref="205" max="-2" attributes="0"/>
+                                  <Component id="lblTotalCost1" alignment="1" min="-2" pref="205" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
                           </Group>
@@ -525,7 +525,7 @@
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="jLabel28" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="lblBookingName" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lblBookingName1" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
@@ -542,12 +542,12 @@
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="jLabel32" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="lblAdditionalCost" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lblAdditionalCost1" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="jLabel33" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="lblTotalCost" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lblTotalCost1" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="32767" attributes="0"/>
                           </Group>
@@ -680,7 +680,7 @@
                         <Property name="text" type="java.lang.String" value="-"/>
                       </Properties>
                     </Component>
-                    <Component class="javax.swing.JLabel" name="lblBookingName">
+                    <Component class="javax.swing.JLabel" name="lblBookingName1">
                       <Properties>
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="Inter 18pt Black" size="12" style="1"/>
@@ -716,7 +716,7 @@
                         <Property name="text" type="java.lang.String" value="-"/>
                       </Properties>
                     </Component>
-                    <Component class="javax.swing.JLabel" name="lblAdditionalCost">
+                    <Component class="javax.swing.JLabel" name="lblAdditionalCost1">
                       <Properties>
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="Inter 18pt Black" size="12" style="1"/>
@@ -728,7 +728,7 @@
                         <Property name="text" type="java.lang.String" value="-"/>
                       </Properties>
                     </Component>
-                    <Component class="javax.swing.JLabel" name="lblTotalCost">
+                    <Component class="javax.swing.JLabel" name="lblTotalCost1">
                       <Properties>
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="Inter 18pt Black" size="12" style="1"/>
@@ -855,20 +855,20 @@
                                       <Group type="103" groupAlignment="0" attributes="0">
                                           <Group type="103" groupAlignment="0" attributes="0">
                                               <Group type="103" groupAlignment="0" attributes="0">
-                                                  <Component id="jLabel55" alignment="0" pref="410" max="32767" attributes="0"/>
-                                                  <Component id="jLabel54" max="32767" attributes="0"/>
-                                                  <Component id="jLabel60" alignment="0" max="32767" attributes="0"/>
-                                                  <Component id="jLabel61" alignment="0" max="32767" attributes="0"/>
-                                                  <Component id="jLabel62" alignment="0" max="32767" attributes="0"/>
-                                                  <Component id="jLabel59" alignment="0" max="32767" attributes="0"/>
-                                                  <Component id="jLabel63" alignment="0" max="32767" attributes="0"/>
-                                                  <Component id="jLabel64" alignment="0" max="32767" attributes="0"/>
+                                                  <Component id="lblStatus" alignment="0" pref="410" max="32767" attributes="0"/>
+                                                  <Component id="lblBookingCode" max="32767" attributes="0"/>
+                                                  <Component id="lblCarriages" alignment="0" max="32767" attributes="0"/>
+                                                  <Component id="lblDepartureTime" alignment="0" max="32767" attributes="0"/>
+                                                  <Component id="lblRoute" alignment="0" max="32767" attributes="0"/>
+                                                  <Component id="lblClass" alignment="0" max="32767" attributes="0"/>
+                                                  <Component id="lblAdditionalCost2" alignment="0" max="32767" attributes="0"/>
+                                                  <Component id="lblTotalCost2" alignment="0" max="32767" attributes="0"/>
                                               </Group>
-                                              <Component id="jLabel56" alignment="1" min="-2" pref="353" max="-2" attributes="0"/>
+                                              <Component id="lblBookingDate" alignment="1" min="-2" pref="353" max="-2" attributes="0"/>
                                           </Group>
-                                          <Component id="jLabel57" alignment="1" min="-2" pref="353" max="-2" attributes="0"/>
+                                          <Component id="lblTrainNumber" alignment="1" min="-2" pref="353" max="-2" attributes="0"/>
                                       </Group>
-                                      <Component id="jLabel58" alignment="1" min="-2" pref="353" max="-2" attributes="0"/>
+                                      <Component id="lblBookingName2" alignment="1" min="-2" pref="353" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -891,11 +891,11 @@
                                   <Component id="jLabel42" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="1" attributes="0">
-                                  <Component id="jLabel54" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lblBookingCode" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="jLabel55" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lblStatus" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="jLabel56" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lblBookingDate" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
@@ -916,17 +916,17 @@
                                   <Component id="jLabel51" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="1" attributes="0">
-                                  <Component id="jLabel57" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lblTrainNumber" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="jLabel58" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lblBookingName2" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="jLabel59" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lblClass" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="jLabel60" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lblCarriages" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="jLabel61" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lblDepartureTime" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="jLabel62" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lblRoute" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
@@ -939,9 +939,9 @@
                                   <Component id="jLabel53" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="1" attributes="0">
-                                  <Component id="jLabel63" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lblAdditionalCost2" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="jLabel64" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lblTotalCost2" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
@@ -1166,7 +1166,7 @@
                     </DimensionLayout>
                   </Layout>
                 </Container>
-                <Component class="javax.swing.JLabel" name="jLabel54">
+                <Component class="javax.swing.JLabel" name="lblBookingCode">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Inter 18pt Black" size="12" style="1"/>
@@ -1178,7 +1178,7 @@
                     <Property name="text" type="java.lang.String" value="-"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JLabel" name="jLabel55">
+                <Component class="javax.swing.JLabel" name="lblStatus">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Inter 18pt Black" size="12" style="1"/>
@@ -1190,7 +1190,7 @@
                     <Property name="text" type="java.lang.String" value="-"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JLabel" name="jLabel56">
+                <Component class="javax.swing.JLabel" name="lblBookingDate">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Inter 18pt Black" size="12" style="1"/>
@@ -1202,7 +1202,7 @@
                     <Property name="text" type="java.lang.String" value="-"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JLabel" name="jLabel57">
+                <Component class="javax.swing.JLabel" name="lblTrainNumber">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Inter 18pt Black" size="12" style="1"/>
@@ -1214,7 +1214,7 @@
                     <Property name="text" type="java.lang.String" value="-"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JLabel" name="jLabel58">
+                <Component class="javax.swing.JLabel" name="lblBookingName2">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Inter 18pt Black" size="12" style="1"/>
@@ -1226,7 +1226,7 @@
                     <Property name="text" type="java.lang.String" value="-"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JLabel" name="jLabel59">
+                <Component class="javax.swing.JLabel" name="lblClass">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Inter 18pt Black" size="12" style="1"/>
@@ -1238,7 +1238,7 @@
                     <Property name="text" type="java.lang.String" value="-"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JLabel" name="jLabel60">
+                <Component class="javax.swing.JLabel" name="lblCarriages">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Inter 18pt Black" size="12" style="1"/>
@@ -1250,7 +1250,7 @@
                     <Property name="text" type="java.lang.String" value="-"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JLabel" name="jLabel61">
+                <Component class="javax.swing.JLabel" name="lblDepartureTime">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Inter 18pt Black" size="12" style="1"/>
@@ -1262,7 +1262,7 @@
                     <Property name="text" type="java.lang.String" value="-"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JLabel" name="jLabel62">
+                <Component class="javax.swing.JLabel" name="lblRoute">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Inter 18pt Black" size="12" style="1"/>
@@ -1274,7 +1274,7 @@
                     <Property name="text" type="java.lang.String" value="-"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JLabel" name="jLabel63">
+                <Component class="javax.swing.JLabel" name="lblAdditionalCost2">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Inter 18pt Black" size="12" style="1"/>
@@ -1286,7 +1286,7 @@
                     <Property name="text" type="java.lang.String" value="-"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JLabel" name="jLabel64">
+                <Component class="javax.swing.JLabel" name="lblTotalCost2">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Inter 18pt Black" size="12" style="1"/>
