--- a/src/client/views/BookingMenu.form
+++ b/src/client/views/BookingMenu.form
@@ -25,8 +25,8 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="189" max="-2" attributes="0"/>
-              <Component id="jScrollPane1" min="-2" pref="1041" max="-2" attributes="0"/>
-              <EmptySpace pref="143" max="32767" attributes="0"/>
+              <Component id="jScrollPane1" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="160" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -60,8 +60,8 @@
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="jPanel24" alignment="1" min="-2" max="-2" attributes="0"/>
                                   <Group type="102" alignment="1" attributes="0">
-                                      <Component id="see_schedule_btn" min="-2" pref="438" max="-2" attributes="0"/>
-                                      <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+                                      <Component id="see_schedule_btn" min="-2" pref="456" max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -126,11 +126,6 @@
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="txtBookingName" pref="466" max="32767" attributes="0"/>
-                              <Component id="cmbDestination" alignment="0" max="32767" attributes="0"/>
-                              <Component id="cmbClass" alignment="0" max="32767" attributes="0"/>
-                              <Component id="cmbDepartureTime" alignment="0" max="32767" attributes="0"/>
-                              <Component id="txtPrice" alignment="0" pref="466" max="32767" attributes="0"/>
                               <Component id="jLabel65" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="roundedPanel11" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="jLabel21" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -138,9 +133,14 @@
                               <Component id="jLabel23" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="jLabel24" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="jLabel25" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="txtBookingName" pref="478" max="32767" attributes="0"/>
+                              <Component id="cmbDestination" alignment="0" max="32767" attributes="0"/>
+                              <Component id="cmbClass" alignment="0" max="32767" attributes="0"/>
+                              <Component id="cmbDepartureTime" alignment="0" max="32767" attributes="0"/>
+                              <Component id="txtPrice" alignment="0" max="32767" attributes="0"/>
                               <Component id="cmbCarriage" alignment="0" max="32767" attributes="0"/>
                           </Group>
-                          <EmptySpace pref="29" max="32767" attributes="0"/>
+                          <EmptySpace pref="17" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -394,14 +394,14 @@
                 <DimensionLayout dim="0">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
                               <Component id="roundedPanel13" min="-2" max="-2" attributes="0"/>
                               <Component id="jPanel25" max="32767" attributes="0"/>
                               <Component id="resetBtn" alignment="0" max="32767" attributes="0"/>
-                              <Component id="confirm_booking_btn" alignment="1" max="32767" attributes="0"/>
+                              <Component id="confirm_booking_btn" alignment="0" max="32767" attributes="0"/>
                           </Group>
-                          <EmptySpace pref="26" max="32767" attributes="0"/>
+                          <EmptySpace pref="17" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -488,7 +488,7 @@
                                   <Component id="jLabel31" min="-2" max="-2" attributes="0"/>
                                   <Component id="jLabel33" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace pref="88" max="32767" attributes="0"/>
+                              <EmptySpace pref="106" max="32767" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Group type="103" alignment="1" groupAlignment="0" attributes="0">
                                       <Component id="lblFromStation" min="-2" pref="205" max="-2" attributes="0"/>
@@ -808,13 +808,11 @@
                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
-                          <Component id="roundedButton4" min="-2" pref="298" max="-2" attributes="0"/>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="roundedButton6" min="-2" pref="298" max="-2" attributes="0"/>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="roundedButton5" min="-2" pref="299" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="130" max="-2" attributes="0"/>
+                          <Component id="roundedButton4" min="-2" pref="300" max="-2" attributes="0"/>
                           <EmptySpace max="32767" attributes="0"/>
+                          <Component id="roundedButton5" min="-2" pref="300" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="130" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
                           <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
@@ -852,23 +850,17 @@
                                   </Group>
                                   <EmptySpace min="-2" pref="469" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Group type="103" groupAlignment="0" attributes="0">
-                                              <Group type="103" groupAlignment="0" attributes="0">
-                                                  <Component id="lblStatus" alignment="0" pref="410" max="32767" attributes="0"/>
-                                                  <Component id="lblBookingCode" max="32767" attributes="0"/>
-                                                  <Component id="lblCarriages" alignment="0" max="32767" attributes="0"/>
-                                                  <Component id="lblDepartureTime" alignment="0" max="32767" attributes="0"/>
-                                                  <Component id="lblRoute" alignment="0" max="32767" attributes="0"/>
-                                                  <Component id="lblClass" alignment="0" max="32767" attributes="0"/>
-                                                  <Component id="lblAdditionalCost2" alignment="0" max="32767" attributes="0"/>
-                                                  <Component id="lblTotalCost2" alignment="0" max="32767" attributes="0"/>
-                                              </Group>
-                                              <Component id="lblBookingDate" alignment="1" min="-2" pref="353" max="-2" attributes="0"/>
-                                          </Group>
-                                          <Component id="lblTrainNumber" alignment="1" min="-2" pref="353" max="-2" attributes="0"/>
-                                      </Group>
-                                      <Component id="lblBookingName2" alignment="1" min="-2" pref="353" max="-2" attributes="0"/>
+                                      <Component id="lblStatus" alignment="0" pref="410" max="32767" attributes="0"/>
+                                      <Component id="lblBookingCode" max="32767" attributes="0"/>
+                                      <Component id="lblCarriages" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="lblDepartureTime" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="lblRoute" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="lblClass" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="lblAdditionalCost2" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="lblTotalCost2" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="lblBookingName2" max="32767" attributes="0"/>
+                                      <Component id="lblTrainNumber" max="32767" attributes="0"/>
+                                      <Component id="lblBookingDate" alignment="1" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -946,7 +938,6 @@
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="roundedButton6" alignment="3" min="-2" pref="36" max="-2" attributes="0"/>
                               <Component id="roundedButton4" alignment="3" min="-2" pref="36" max="-2" attributes="0"/>
                               <Component id="roundedButton5" alignment="3" pref="0" max="32767" attributes="0"/>
                           </Group>
@@ -1330,26 +1321,6 @@
                       <Image iconType="3" name="/img/icons8-pdf-25.png"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="Export As PDF"/>
-                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                      <Font name="Inter" size="24" style="1"/>
-                    </Property>
-                  </Properties>
-                </Component>
-                <Component class="client.components.RoundedButton" name="roundedButton6">
-                  <Properties>
-                    <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="ff" green="ff" red="ff" type="rgb"/>
-                    </Property>
-                    <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                      <Connection code="new RoundedBorder(20, new Color(68,68,68), 1)" type="code"/>
-                    </Property>
-                    <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="44" green="44" red="44" type="rgb"/>
-                    </Property>
-                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                      <Image iconType="3" name="/img/icons8-save-25.png"/>
-                    </Property>
-                    <Property name="text" type="java.lang.String" value="Save File"/>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Inter" size="24" style="1"/>
                     </Property>
