Receipt & QRCode selesai

--- a/src/client/views/BookingMenu.form
+++ b/src/client/views/BookingMenu.form
@@ -809,7 +809,7 @@
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="130" max="-2" attributes="0"/>
-                          <Component id="roundedButton4" min="-2" pref="300" max="-2" attributes="0"/>
+                          <Component id="printTicketBtn" min="-2" pref="300" max="-2" attributes="0"/>
                           <EmptySpace max="32767" attributes="0"/>
                           <Component id="roundedButton5" min="-2" pref="300" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="130" max="-2" attributes="0"/>
@@ -938,7 +938,7 @@
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="roundedButton4" alignment="3" min="-2" pref="36" max="-2" attributes="0"/>
+                              <Component id="printTicketBtn" alignment="3" min="-2" pref="36" max="-2" attributes="0"/>
                               <Component id="roundedButton5" alignment="3" pref="0" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace pref="12" max="32767" attributes="0"/>
@@ -1289,7 +1289,7 @@
                     <Property name="text" type="java.lang.String" value="-"/>
                   </Properties>
                 </Component>
-                <Component class="client.components.RoundedButton" name="roundedButton4">
+                <Component class="client.components.RoundedButton" name="printTicketBtn">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="44" green="44" red="44" type="rgb"/>
@@ -1305,6 +1305,9 @@
                       <Font name="Inter" size="24" style="1"/>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="printTicketBtnActionPerformed"/>
+                  </Events>
                 </Component>
                 <Component class="client.components.RoundedButton" name="roundedButton5">
                   <Properties>
