--- a/src/client/views/Receipt.form
+++ b/src/client/views/Receipt.form
@@ -147,7 +147,7 @@
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="201" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="235" max="-2" attributes="0"/>
                       <Component id="lblQRCode" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
@@ -598,7 +598,7 @@
             </Component>
             <Component class="javax.swing.JLabel" name="lblQRCode">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Buat barcode juga"/>
+                <Property name="text" type="java.lang.String" value="Buat barcode "/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel43">
