--- a/src/client/views/TrainSchedule.form
+++ b/src/client/views/TrainSchedule.form
@@ -302,7 +302,7 @@
                       <Border info="null"/>
                     </Property>
                     <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                      <StringArray count="9">
+                      <StringArray count="10">
                         <StringItem index="0" value="Id Schedule"/>
                         <StringItem index="1" value="Train Number"/>
                         <StringItem index="2" value="Machinist"/>
@@ -312,6 +312,7 @@
                         <StringItem index="6" value="Carriages"/>
                         <StringItem index="7" value="Class"/>
                         <StringItem index="8" value="Price"/>
+                        <StringItem index="9" value="Id Admin"/>
                       </StringArray>
                     </Property>
                   </Properties>
